# F1

./: .gitignore  CMakeLists.txt  Current Main  README.md  json response  main.cpp
src/: Display.cpp  Pages.cpp  Pages.h  Request.cpp  Request.h  Response.cpp  Response.h  standings.h
